cleaned up public folder files

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <footer>
-        <h6>Made by Abrahan Martinez</h6>
+        <h6>Created by Abrahan Martinez</h6>
     </footer>
     <script src="./script.js"></script>
 </body>
